--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
   <body>
     <main>
       <section class="sec1">
-        <div class="border-red">
-          <img src="src/card 2.jpg" alt="" />
+        <div class="border-red border-red1">
+          <img src="src/card_ship-removebg-preview.png" alt="" />
         </div>
-        <div class="border-yellow"></div>
+        <div class="border-red border-red2"></div>
         <div class="border-card"></div>
       </section>
       <section class="sec2">
         <div class="card">
-          <h1>Card number</h1>
+          <div style="display: flex; justify-content: space-between">
+            <h1>Card number</h1>
+            <h2>Master Card</h2>
+          </div>
           <div class="star">
             <h1>****</h1>
             <h1>****</h1>
